# dev-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json
.docker/: Dockerfile  aarch64-toolchain.cmake
dev_include/: README.md
dev_include/kipr/: wombat.h  wombat.hpp
dev_include/kipr/analog/: analog.h
dev_include/kipr/motor/: motor.h
include/: main.hpp
src/: main.cpp
